# jupyter-cellmixer

./: .gitignore  README.md  hello.ipynb  jupyter-lite.json  pyproject.toml  unfold_for_loop.ipynb
.github/workflows/: JupyterLite.yml
.jupyterlite/: requirements.txt
api/contents/: all.json
files/: README.md  cellmixer_notebook.ipynb
