[tool.poetry]
name = "jupyter-cellmixer"
version = "0.0.1"
description = ""
authors = ["kolibril13 <44469195+kolibril13@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7"
jupyterlab = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
